# SIMD

./: .gitignore  README.md
examples/agner_exp/: CMakeLists.txt
examples/agner_exp/src/: main.cpp
examples/doubler/: CMakeLists.txt
examples/doubler/src/: main.cpp
examples/min_finder/: CMakeLists.txt
examples/min_finder/src/: main.cpp
examples/stl_halve/: CMakeLists.txt
examples/stl_halve/src/: main.cpp
src/: intrinsic_generator.hh  simd_container.hh  simd_guide.hh  simd_unroller.hh  std_simd_proposed_unroller.hh
src/scrap/: simd_unroller.hh  std_simd_unroller.hh
